--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://1543siddhant.github.io/Portfolio",
+  "homepage": "https://1543siddhant.github.io/Portfolio-Siddhant",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -54,6 +54,6 @@
     "@babel/plugin-proposal-decorators": "^7.24.6",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "babel-eslint": "^10.1.0",
-    "gh-pages": "^6.1.1"
+    "gh-pages": "^6.2.0"
   }
 }
